# owd_vlk

./: .gitignore  Makefile  README.md  configure.bat  configure.sh  owd_vlk  owd_vlk.cbp  owd_vlk.depend  owd_vlk.layout
src/: CMakeLists.txt  app.cpp  app.h  glfw_error.cpp  glfw_error.h  glfw_init.cpp  glfw_init.h  main  main.cpp  monitor.cpp  monitor.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_surface.cpp  vulkan_surface.h  window  window.cpp  window.h
src/owd_lib/: CMakeLists.txt  owd_define.cpp  owd_define.h  owd_filesystem.cpp  owd_filesystem.h  owd_lib.cpp  owd_lib.h  owd_logger.cpp  owd_logger.h  owd_object.cpp  owd_object.h  owd_output.cpp  owd_output.h  owd_singleton.cpp  owd_singleton.h  owd_string.cpp  owd_string.h  owd_time.cpp  owd_time.h
src/owd_lib/owd_filesystem/: CMakeLists.txt
src/shader/: CMakeLists.txt  compile.bat  compile.sh  fragment.glsl  fragment.spv  shader.cpp  shader.h  vertex.glsl  vertex.spv
